# goit-pythonweb-hw-012

./: .example.env  README.md  docker-compose.yml  main.py  pyproject.toml  test.db
docs/source/: conf.py  index.rst
migrations/versions/: 6fdf0c093427_add_role_field_to_users.py  80223ea32530_fix_enum_casing.py  c6120fed48e8_fix_enum_casing.py
src/: schemas.py
src/api/: auth.py
src/cache/: redis_client.py
src/conf/: config.py
src/database/: models.py
src/repository/: contacts.py  users.py
src/services/: auth.py  hash.py  mail.py  users.py
src/services/templates/: reset_password.html  reset_password_form.html
tests/: conftest.py  test_contact_repository_unit.py  test_integration_auth.py  test_integration_contacts.py  test_integration_users.py  test_user_repository_unit.py
